--- a/src/index.css
+++ b/src/index.css
@@ -89,3 +89,61 @@ code {
   font-weight: 700;
   margin-bottom: 10px;
 }
+
+.likeButton {
+  display: inline-block;
+  font-size: 2.5rem;
+  border: 0;
+  padding: 20px 40px;
+  margin: 20px;
+}
+
+.clickablePic {
+  width: 250px;
+  height: 250px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 20px auto;
+}
+
+.carousel {
+  height: 500px;
+  width: 500px;
+  margin: 40px auto;
+  background-size: cover;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+
+button {
+  margin: 0 10px;
+  border: 0;
+  padding: 8px 15px;
+  background-color: aquamarine;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+}
+
+.numbersTable {  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  margin: 15px;
+}
+
+.numbersTable > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 50px;
+  border: 2px solid black;
+}
+
+.numbersTable > div.evenBox {
+  background-color: red;
+}
