--- a/src/index.css
+++ b/src/index.css
@@ -118,13 +118,17 @@ code {
 }
 
 button {
-  margin: 0 10px;
+  margin: 5px 5px;
   border: 0;
   padding: 8px 15px;
   background-color: aquamarine;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
+}
+
+.selected {
+  background-color: dodgerblue;
 }
 
 .numbersTable {  
@@ -146,4 +150,8 @@ button {
 
 .numbersTable > div.evenBox {
   background-color: red;
+}
+
+#profiles .hidden {
+  visibility: hidden;
 }
